<?xml version="1.0"?>
<package format="2">
  <name>dsp_sdk</name>
  <version>0.0.0</version>
  <description>The dsp_sdk package</description>

  <maintainer email="b51live@gmail.com">b51</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
